# b2b_credit_risk_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: eda_rf_default_model.pkl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
scripts/: check_phase2_outputs.py  load_to_postgres.py  load_to_postgres_v2.py  run_all_sql.py  run_data_generation.py  run_eda_model.py  run_feature_pipeline.py  run_full_pipeline.py  run_model_training.py  run_phase2.py
sql/analytics/: 01_monthly_portfolio_summary.sql  02_default_rate_by_rating.sql  03_exposure_by_country_industry.sql  04_overdue_trend.sql  05_top_risk_accounts.sql
sql/ddl/: 01_create_schema.sql  02_create_dim_date.sql  03_create_dim_country.sql  04_create_dim_industry.sql  05_create_dim_risk_rating.sql  06_create_dim_customer.sql  07_create_fact_exposure_snapshot.sql  08_create_fact_invoice.sql  09_create_fact_payment.sql  10_create_fact_default_event.sql  11_create_fact_rating_history.sql
sql/load/: 01_load_dim_date.sql  02_load_dim_country.sql  03_load_dim_industry.sql  04_load_dim_risk_rating.sql  05_load_dim_customer.sql  06_load_fact_exposure_snapshot.sql  07_load_fact_invoice.sql  08_load_fact_payment.sql  09_load_fact_default_event.sql  10_load_fact_rating_history.sql
sql/quality_checks/: 01_row_count_checks.sql  02_null_checks.sql  03_pk_uniqueness_checks.sql  04_fk_integrity_checks.sql  05_business_rule_checks.sql
sql/staging/: 01_create_stg_customer.sql  02_create_stg_customer_month_panel.sql  03_create_stg_invoice.sql  04_create_stg_payment.sql  05_create_stg_default_event.sql
sql/views/: 01_vw_customer_risk_monitor.sql  03_vw_top_deteriorating_customers.sql  04_vw_country_industry_loss.sql  05_vw_rating_migration.sql
src/b2b_credit_risk_analysis/: config.py
src/b2b_credit_risk_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/b2b_credit_risk_analysis/data_generation/: customer_month.py  customers.py  defaults.py  finalize.py  invoices.py  payments.py
src/b2b_credit_risk_analysis/features/: panel_features.py  payment_features.py  risk_features.py
src/b2b_credit_risk_analysis/modeling/: train.py
src/b2b_credit_risk_analysis/warehouse/: build_dim_date.py  build_dimensions.py  build_facts.py  export_phase2_tables.py  run_phase2.py
tests/: test_feature_model_pipeline.py  test_phase2_warehouse.py
